feat: Buat Kordinat yang benar dari atas sampai Fakultas Perikanan

--- a/unhas.html
+++ b/unhas.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
         }
         #header {
-            background-color: #D62828; /* Warna merah khas UNHAS */
+            background-color: #D62828;
             color: white;
             padding: 15px;
             text-align: center;
